fix: Statistics panel alignment issue fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -193,6 +193,10 @@ body.dark-theme {
   text-align: center;
 }
 
+.highlight-on-hover:hover {
+  box-shadow: 0 0 .25rem .25rem rgba(0, 0, 255, 0.35);
+}
+
 /* ng-bootstrap carousal styles customisation */
 .carousel-control-prev-icon {
   filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(346deg) brightness(104%) contrast(97%);
